# QAI

./: .gitignore  Cargo.toml  README.md  qa-agent-system-prompt.md
intellij-plugin/: build.gradle.kts  gradlew  gradlew.bat  settings.gradle.kts
intellij-plugin/src/main/kotlin/com/qai/plugin/: QaiBinaryLocator.kt  QaiSettings.kt  QaiSettingsConfigurable.kt  QaiStartupActivity.kt  QaiToolWindowFactory.kt
intellij-plugin/src/test/kotlin/com/qai/plugin/: QaiSettingsTest.kt  QaiToolWindowFactoryTest.kt
src/: lib.rs  main.rs  tui.rs
src/agent/: mod.rs  tools.rs
src/tui/: api.rs  draw.rs  event_handlers.rs  events.rs  input.rs  mod.rs  providers.rs  state.rs  state_manager.rs  util.rs
src/tui/state/: app_logic.rs  chat_state.rs  info_state.rs  menu_state.rs  show_state.rs  tools_state.rs  validate_state.rs
tests/: agent_tests.rs  main_tests.rs  tui_tests.rs
