[package]
name = "qai-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
ratatui = "0.30.0"
crossterm = { version = "0.29.0", features = ["event-stream"] }
dirs = "6.0.0"
reqwest = { version = "0.13.2", features = ["json", "blocking", "stream"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
arboard = "3"

[dev-dependencies]
tempfile = "3"
